@@ -398,3 +398,4 @@ Version 0.0.1:
 392/ Fixed a stupid bugs that make specific melee weapon hit every enemy.
 393/ Added Akai Hanbun No Hasami
 394/ Added sprite for Arena Blessing and Celestial Rage, also slightly reworked the Perk UI system rendering.
+395/ Optimize world generation task "Create_Biome" and other such task.
